--- a/.travis.yml
+++ b/.travis.yml
@@ -92,3 +92,11 @@ notifications:
     on_success: change
     on_failure: always
     on_start: never
+
+deploy:
+  provider: releases
+  api_key: "21bbbed532182bf01ec56c1ed1cc0ec214a44cc5"
+  file: "Mist-win32-0-9-3.zip"
+  skip_cleanup: true
+  on:
+    tags: true
