--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-promise": "^2.0.0",
     "got": "^6.7.1",
     "i18next": "^7.1.3",
+    "istanbul": "^0.4.5",
     "lodash": "^4.17.4",
     "log-rotate": "^0.2.7",
     "log4js": "^1.1.1",
