--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Mist",
-  "version": "0.9.3",
+  "name": "Ellagem",
+  "version": "0.0.1",
   "license": "GPL-3.0",
-  "author": "Ethereum Mist Team <mist@ethereum.org>",
+  "author": "Ellaism Community <foreignfive@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ethereum/mist.git"
+    "url": "https://github.com/ellaism/ellagem.git"
   },
   "scripts": {
     "postinstall": "cd interface && yarn",
