--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ script:
   - if [[ $TRAVIS_BRANCH == "master" ]]; then travis_wait 60 gulp --wallet --$GULP_PLATFORM; fi
   # prepare and run integration tests
   - if [[ $TRAVIS_OS_NAME == "linux" ]]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; sleep 3; fi
-  - if [[ $GULP_PLATFORM != "win" ]]; then gulp test; fi
+  #- if [[ $GULP_PLATFORM != "win" ]]; then gulp test; fi
 
 after_success:
   - if [[ $TRAVIS_BRANCH == "master" ]]; then gulp uploadQueue --$GULP_PLATFORM && gulp uploadQueue --wallet --$GULP_PLATFORM; fi
