--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "chai-as-promised": "^6.0.0",
     "chai-string": "^1.3.0",
     "electron-window-state": "^4.0.1",
-    "ellaism-client-binaries": "^1.0.0",
+    "ellaism-client-binaries": "^1.1.0",
     "ethereum-client-binaries": "^1.6.1",
     "ethereum-keyfile-recognizer": "^1.0.2",
     "ethereumjs-abi": "^0.6.3",
     "ethereumjs-util": "^5.1.2",
     "fs-promise": "^2.0.0",
+    "fstream": "^1.0.11",
     "got": "^6.7.1",
     "i18next": "^7.1.3",
     "istanbul": "^0.4.5",
@@ -47,6 +48,7 @@
     "yargs": "^7.0.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-preset-es2016-node5": "^1.1.2",
     "babel-register": "^6.26.0",
     "chai": "^3.5.0",
